--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,7 +16,7 @@
         <!-- Profile Picture -->
         <img src="{{ '/assets/img/profile.jpg' | relative_url }}" alt="Profile Picture" class="profile-img">
         <h2>Thomas Hinano Keller</h2>
-        <p>Data Scientist | Machine Learning Engineer</p>
+        <p>Data Scientist | Machine Learning Engineer | Medical Imaging AI Researcher</p>
         
         <p><p>San Diego, USA | Zurich, Switzerland</p>
         
