--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -36,6 +36,7 @@
             <li><a href="{{ '/' | relative_url }}">Home</a></li>
             <li><a href="{{ '/cv/' | relative_url }}">CV</a></li>
             <li><a href="{{ '/projects/' | relative_url }}">Projects</a></li>
+            <li><a href="{{ '/links/' | relative_url }}">Links</a></li>
           </ul>
         </nav>
         
