--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,7 @@
         <h2>Thomas Hinano Keller</h2>
         <p>Data Scientist | Machine Learning Engineer | Medical Imaging AI Researcher</p>
         
-        <p><p>Los Angeles, USA | Zurich, Switzerland</p>
+        <p><p>Zurich, Switzerland</p>
         
         <!-- Social Links -->
         <ul class="social-links">
