--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -22,7 +22,7 @@
         
         <!-- Social Links -->
         <ul class="social-links">
-          <li><a href="https://linkedin.com/in/thomkell">LinkedIn</a></li>
+         <!-- <li><a href="https://linkedin.com/in/thomkell">LinkedIn</a></li> -->
           <li><a href="https://github.com/thomkell">GitHub</a></li>
         </ul>
       </div>
