--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,9 +16,9 @@
         <!-- Profile Picture -->
         <img src="{{ '/assets/img/profile.jpg' | relative_url }}" alt="Profile Picture" class="profile-img">
         <h2>Thomas Hinano Keller</h2>
-        <p>Data Scientist | Machine Learning Engineer | Medical Imaging AI Researcher</p>
+        <p>AI Researcher | Machine Learning Engineer | Medical Imaging AI</p>
         
-        <p><p>Zurich, Switzerland</p>
+        <p><p>Zurich, Switzerland | Barcelona, Spain</p>
         
         <!-- Social Links -->
         <ul class="social-links">
