--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -16,13 +16,13 @@
         <!-- Profile Picture -->
         <img src="{{ '/assets/img/profile.jpg' | relative_url }}" alt="Profile Picture" class="profile-img">
         <h2>Thomas Hinano Keller</h2>
-        <p>AI Researcher | Machine Learning Engineer | Medical Imaging AI</p>
+        <p>AI Researcher | Machine Learning Engineer | Medical Imaging</p>
         
         <p><p>Zurich, Switzerland | Barcelona, Spain</p>
         
         <!-- Social Links -->
         <ul class="social-links">
-         <!-- <li><a href="https://linkedin.com/in/thomkell">LinkedIn</a></li> -->
+          <li><a href="https://linkedin.com/in/thomkell">LinkedIn</a></li>
           <li><a href="https://github.com/thomkell">GitHub</a></li>
         </ul>
       </div>
@@ -36,6 +36,7 @@
             <li><a href="{{ '/cv/' | relative_url }}">CV</a></li>
             <li><a href="{{ '/projects/' | relative_url }}">Projects</a></li>
             <li><a href="{{ '/links/' | relative_url }}">Links</a></li>
+            <li><a href="{{ '/consulting/' | relative_url }}">Consulting</a></li>
           </ul>
         </nav>
         
